created gallery block

--- a/src/pages/Home/intro.hbs
+++ b/src/pages/Home/intro.hbs
@@ -22,9 +22,9 @@
         <div class="intro__background-img swiper-slide"></div>
     </div>
     <div class="intro__swiper-nav">
-      <img alt="кнопка обратно" src="/assets/images/icons/prevButton.svg" class="intro__button-prev"/>
-      <div class="intro__pagination"></div>
-      <img alt="кнопка вперед" src="/assets/images/icons/nextButton.svg" class="intro__button-next"/>
+      <img alt="кнопка обратно" src="/assets/images/icons/prevButton.svg" class="intro__button-prev swiper__button-prev"/>
+      <p class="intro__pagination swiper__pagination"></p>
+      <img alt="кнопка вперед" src="/assets/images/icons/nextButton.svg" class="intro__button-next swiper__button-next"/>
     </div>
   </div>
   
