--- a/src/styles/Home/intro.css
+++ b/src/styles/Home/intro.css
@@ -1,9 +1,6 @@
 .intro {
-  width: calc(100% - 8rem);
+  width: 100%;
   height: 100vh;
-  position: absolute;
-  top: 0;
-  right: 0;
 }
 .intro__upper {
   width: 95%;
@@ -14,14 +11,12 @@
   right: 9rem;
   z-index: 10;
 }
-
 .intro__middle {
   position: absolute;
   z-index: 10;
   top: 16rem;
-  left: 8.8rem;
+  left: 16rem;
 }
-
 .intro__button-order {
   width: 14.9rem;
   height: 4rem;
@@ -37,7 +32,6 @@
   width: inherit;
   height: inherit;
 }
-
 .intro__title {
   font-family: "Cormorant Infant";
   font-style: normal;
@@ -47,11 +41,9 @@
   text-transform: uppercase;
   color: #052e4c;
 }
-
 .intro__title-middle {
   font-style: italic;
 }
-
 .intro__paragraph {
   margin-top: 2.4rem;
   max-width: 47.7rem;
@@ -63,15 +55,9 @@
   margin-top: 4.8rem;
   transition: 0.4s ease;
 }
-
 .intro__button-calc:hover {
   color: white;
   background-color: #052e4c;
-}
-
-.button-white {
-}
-.intro__wrapper {
 }
 .intro__background-img {
   width: 100%;
@@ -82,7 +68,6 @@
   background-size: cover;
   z-index: -1;
 }
-
 .intro__swiper-nav {
   position: absolute;
   z-index: 100;
@@ -90,23 +75,4 @@
   left: 9rem;
   display: flex;
   align-items: center;
-}
-.intro__button-prev {
-  width: 3rem;
-  height: 3rem;
-  cursor: pointer;
-  margin-right: 3rem;
-}
-.intro__button-next {
-  width: 3rem;
-  height: 3rem;
-  cursor: pointer;
-}
-
-.intro__pagination {
-  font-family: "PT Sans";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 1.5rem;
-  color: #052e4c;
 }
