--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,7 +1,9 @@
 html {
   font-size: 0.7vw;
 }
-
+body {
+  margin-left: 8rem;
+}
 .button-white {
   font-family: "PT Sans";
   font-style: normal;
@@ -10,12 +12,52 @@ html {
   text-transform: uppercase;
   color: #052e4c;
 }
-
 .text {
   font-family: "PT Sans";
   font-style: normal;
   font-weight: 400;
   font-size: 1.6rem;
   line-height: 1.3;
+  color: #052e4c;
+}
+.title-img {
+  font-family: "Cormorant Infant";
+  font-style: italic;
+  font-weight: 400;
+  font-size: 2rem;
+  line-height: 100%;
+  text-transform: uppercase;
+  color: #052e4c;
+}
+.block-with-strip {
+  display: grid;
+  grid-template-columns: 7fr 1fr;
+}
+.title__background {
+  font-family: "Cormorant";
+  font-style: italic;
+  font-weight: 400;
+  font-size: 22rem;
+  color: #ffffff;
+  opacity: 0.05;
+  top: 5rem;
+}
+/* swiper */
+.swiper__button-prev {
+  width: 3rem;
+  height: 3rem;
+  cursor: pointer;
+  margin-right: 3rem;
+}
+.swiper__button-next {
+  width: 3rem;
+  height: 3rem;
+  cursor: pointer;
+}
+.swiper__pagination {
+  font-family: "PT Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.5rem;
   color: #052e4c;
 }
