--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 @import url("./src/styles/reset.css");
 @import url("/src/styles/global.css");
+
 @import url("./src/styles/Home/header.css");
 @import url("./src/styles/Home/intro.css");
+@import url("./src/styles/Home/gallery.css")
