--- a/style.css
+++ b/style.css
@@ -3,4 +3,6 @@
 
 @import url("./src/styles/Home/header.css");
 @import url("./src/styles/Home/intro.css");
-@import url("./src/styles/Home/gallery.css")
+@import url("./src/styles/Home/gallery.css");
+@import url("./src/styles/Home/best.css");
+@import url("./src/styles/Home/quiz.css");
