--- a/src/pages/Home/quiz.hbs
+++ b/src/pages/Home/quiz.hbs
@@ -1,10 +1,11 @@
 <section class="quiz">
   <p class="quiz__uppertitle">Ваш помощник в выборе солнцезащиты</p>
+  <div class="quiz__upper-block"></div>
   <div class="quiz__container">
       <div class="quiz__container-upper">
         <h2 class="quiz__title">Для какого помещения выбираете Lorem?</h2>
         <div class="quiz__route">
-          <div class="quiz__circle">1</div>
+          <div class="quiz__circle quiz__circle_active">1</div>
           <div class="quiz__circle">2</div>
           <div class="quiz__circle">3</div>
         </div>
@@ -13,57 +14,57 @@
         <ul class="quiz__form-column">
           <li class="quiz__form-input">
             <input type="checkbox" name="name1">
-            <label for="name1"> Веранда, терраса, уличное пространство</label>
+            <label for="name1" class="text"> Веранда, терраса, уличное пространство</label>
           </li>
           <li class="quiz__form-input">
             <input type="checkbox" name="name2">
-            <label for="name2"> Офис</label>
+            <label for="name2" class="text"> Офис</label>
           </li>
           <li class="quiz__form-input">
             <input type="checkbox" name="name3">
-            <label for="name3"> Учебное или мед. учреждение</label>
+            <label for="name3" class="text"> Учебное или мед. учреждение</label>
           </li>
           <li class="quiz__form-input">
             <input type="checkbox" name="name4">
-            <label for="name4">Помещение с проектором</label>
+            <label for="name4" class="text">Помещение с проектором</label>
           </li>
           <li class="quiz__form-input">
             <input type="checkbox" name="name5">
-            <label for="name5">Стеклянные переговорные</label>
+            <label for="name5" class="text">Стеклянные переговорные</label>
           </li>
           <li class="quiz__form-input">
             <input type="checkbox" name="name6">
-            <label for="name6">Помещение с панорамными окнами</label>
+            <label for="name6" class="text">Помещение с панорамными окнами</label>
           </li>
         </ul>
 
         <ul class="quiz__form-column">
             <li class="quiz__form-input">
               <input type="checkbox" name="name7">
-              <label for="name7">Помещение с мансардными окнами</label>
+              <label for="name7" class="text">Помещение с мансардными окнами</label>
             </li>
             <li class="quiz__form-input">
               <input type="checkbox" name="name8">
-              <label for="name8">Кухня, столовая</label>
+              <label for="name8" class="text">Кухня, столовая</label>
             </li>
             <li class="quiz__form-input">
               <input type="checkbox" name="name9">
-              <label for="name9">Детская</label>
+              <label for="name9" class="text">Детская</label>
             </li>
             <li class="quiz__form-input">
               <input type="checkbox" name="name10">
-              <label for="name10">Спальня</label>
+              <label for="name10" class="text">Спальня</label>
             </li>
             <li class="quiz__form-input">
               <input type="checkbox" name="name11">
-              <label for="name11">Балкон</label>
+              <label for="name11" class="text">Балкон</label>
             </li>
             <li class="quiz__form-input">
               <input type="checkbox" name="name12">
-              <label for="name12">Зимний сад</label>
+              <label for="name12" class="text">Зимний сад</label>
             </li>
           </ul>
-          <button class="white-button quiz__form-button">Далее</button>
       </form>
+      <button class="white-button quiz__form-button">Далее</button>
   </div>
 </section>
