--- a/style.css
+++ b/style.css
@@ -6,3 +6,4 @@
 @import url("./src/styles/Home/gallery.css");
 @import url("./src/styles/Home/best.css");
 @import url("./src/styles/Home/quiz.css");
+@import url("./src/styles/Home/catalog.css");
