change checkbox visibility

--- a/src/pages/Home/catalog.hbs
+++ b/src/pages/Home/catalog.hbs
@@ -1,5 +1,5 @@
 <section class="catalog">
-  <h2 class="catalog__backogound-title">Каталог</h2>
+  <h2 class="catalog__background-title title__background">Каталог</h2>
   <h3 class="catalog__title title__third">Каталог продукции</h3>
   <ul class="catalog__upper-container">
     {{#each catalog}}
