--- a/src/pages/Home/quiz.hbs
+++ b/src/pages/Home/quiz.hbs
@@ -13,55 +13,91 @@
       <form action="#" class="quiz__form">
         <ul class="quiz__form-column">
           <li class="quiz__form-input">
-            <input type="checkbox" name="name1">
-            <label for="name1" class="text"> Веранда, терраса, уличное пространство</label>
+          <label class="text">
+            <input type="checkbox" checked="checked">
+            <span></span>
+            Веранда, терраса, уличное пространство
+          </label>
           </li>
           <li class="quiz__form-input">
-            <input type="checkbox" name="name2">
-            <label for="name2" class="text"> Офис</label>
+          <label class="text">
+            <input type="checkbox">
+            <span></span>
+            Веранда, терраса, уличное пространство
+          </label>
           </li>
           <li class="quiz__form-input">
-            <input type="checkbox" name="name3">
-            <label for="name3" class="text"> Учебное или мед. учреждение</label>
+          <label class="text">
+            <input type="checkbox">
+            <span></span>
+            Веранда, терраса, уличное пространство
+          </label>
           </li>
           <li class="quiz__form-input">
-            <input type="checkbox" name="name4">
-            <label for="name4" class="text">Помещение с проектором</label>
+          <label class="text">
+            <input type="checkbox">
+            <span></span>
+            Веранда, терраса, уличное пространство
+          </label>
           </li>
           <li class="quiz__form-input">
-            <input type="checkbox" name="name5">
-            <label for="name5" class="text">Стеклянные переговорные</label>
+          <label class="text">
+            <input type="checkbox">
+            <span></span>
+            Веранда, терраса, уличное пространство
+          </label>
           </li>
           <li class="quiz__form-input">
-            <input type="checkbox" name="name6">
-            <label for="name6" class="text">Помещение с панорамными окнами</label>
+          <label class="text">
+            <input type="checkbox">
+            <span></span>
+            Веранда, терраса, уличное пространство
+          </label>
           </li>
         </ul>
 
         <ul class="quiz__form-column">
             <li class="quiz__form-input">
-              <input type="checkbox" name="name7">
-              <label for="name7" class="text">Помещение с мансардными окнами</label>
+          <label class="text">
+            <input type="checkbox">
+            <span></span>
+            Веранда, терраса, уличное пространство
+          </label>
             </li>
             <li class="quiz__form-input">
-              <input type="checkbox" name="name8">
-              <label for="name8" class="text">Кухня, столовая</label>
+          <label class="text">
+            <input type="checkbox">
+            <span></span>
+            Веранда, терраса, уличное пространство
+          </label>
             </li>
             <li class="quiz__form-input">
-              <input type="checkbox" name="name9">
-              <label for="name9" class="text">Детская</label>
+          <label class="text">
+            <input type="checkbox">
+            <span></span>
+            Веранда, терраса, уличное пространство
+          </label>
             </li>
             <li class="quiz__form-input">
-              <input type="checkbox" name="name10">
-              <label for="name10" class="text">Спальня</label>
+          <label class="text">
+            <input type="checkbox">
+            <span></span>
+            Веранда, терраса, уличное пространство
+          </label>
             </li>
             <li class="quiz__form-input">
-              <input type="checkbox" name="name11">
-              <label for="name11" class="text">Балкон</label>
+          <label class="text">
+            <input type="checkbox">
+            <span></span>
+            Веранда, терраса, уличное пространство
+          </label>
             </li>
             <li class="quiz__form-input">
-              <input type="checkbox" name="name12">
-              <label for="name12" class="text">Зимний сад</label>
+            <label class="text">
+            <input type="checkbox">
+            <span></span>
+            Веранда, терраса, уличное пространство
+          </label>
             </li>
           </ul>
       </form>
