--- a/src/styles/Home/quiz.css
+++ b/src/styles/Home/quiz.css
@@ -32,13 +32,11 @@
 }
 .quiz__container {
   width: 100%;
-  height: 53.3rem;
+  height: 57rem;
   border: 1px solid #417a82;
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-.quiz__container-upper {
 }
 .quiz__title {
   font-family: "Cormorant";
@@ -77,7 +75,7 @@
   display: block;
   width: 1.5rem;
   right: -2.2rem;
-  border: .1rem solid #417A82;
+  border: 0.1rem solid #417a82;
 }
 .quiz__circle:last-child:before {
   content: "";
@@ -108,11 +106,52 @@
   width: 8.7rem;
   height: 4rem;
   background-color: white;
-  margin-top: 4.8rem;
-  transition: .4s ease all;
+  margin-top: 2.8rem;
+  transition: 0.4s ease all;
 }
 .quiz__form-button:hover {
-  background-color: #052e4c;
-  color: white;
+  background-color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
 }
-
+.quiz__form-input label {
+  display: block;
+  position: relative;
+  padding-left: 3.5rem;
+  margin-bottom: 1.2rem;
+}
+.quiz__form-input label input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+.quiz__form-input span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 1.6rem;
+  width: 1.6rem;
+  background-color: white;
+  border: 1px solid #417a82;
+  cursor: pointer;
+}
+.quiz__form-input span::after {
+  content: "";
+  position: absolute;
+  display: none;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.quiz__form-input label input:checked ~ span::after {
+  display: block;
+}
+.quiz__form-input label span::after {
+  background-image: url("../../../public/assets/images/icons/checkbox.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 1.5rem;
+  height: 1.2rem;
+}
