--- a/src/styles/Home/quiz.css
+++ b/src/styles/Home/quiz.css
@@ -148,7 +148,7 @@
   display: block;
 }
 .quiz__form-input label span::after {
-  background-image: url("../../../public/assets/images/icons/checkbox.svg");
+  background-image: url("/assets/images/icons/checkbox.svg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
