--- a/style.css
+++ b/style.css
@@ -7,3 +7,5 @@
 @import url("./src/styles/Home/best.css");
 @import url("./src/styles/Home/quiz.css");
 @import url("./src/styles/Home/catalog.css");
+@import url("./src/styles/Home/service.css");
+@import url("./src/styles/Home/commerc.css");
