--- a/style.css
+++ b/style.css
@@ -9,3 +9,6 @@
 @import url("./src/styles/Home/catalog.css");
 @import url("./src/styles/Home/service.css");
 @import url("./src/styles/Home/commerc.css");
+@import url("./src/styles/Home/shares.css");
+@import url("./src/styles/Home/blog.css");
+@import url("./src/styles/Home/footer.css");
