change button visibility

--- a/src/pages/Home/catalog.hbs
+++ b/src/pages/Home/catalog.hbs
@@ -27,7 +27,7 @@
       <p class="catalog__calc-text">С помощью онлайн-калькулятора
       Вы узнаете стоимость подобранной Вами солнцезащиты
       </p>
-      <button class="catalog__calc-button white-button">калькулятор солнцезащиты</button>
+      <button class="catalog__calc-button button-white">калькулятор солнцезащиты</button>
     </div>
   </ul>
 </section>
