--- a/src/pages/Home/quiz.hbs
+++ b/src/pages/Home/quiz.hbs
@@ -101,6 +101,6 @@
             </li>
           </ul>
       </form>
-      <button class="white-button quiz__form-button">Далее</button>
+      <button class="button-white quiz__form-button">Далее</button>
   </div>
 </section>
