--- a/src/pages/Home/service.hbs
+++ b/src/pages/Home/service.hbs
@@ -21,6 +21,6 @@
   </div>
   <div class="service__lower-block">
     <p class="service__text text">Оказываем услугу по всему Брянску!</p>
-    <button class="service__button white-button">Заказать замер</button>
+    <button class="service__button button-white">Заказать замер</button>
   </div>
 </section>
